--- a/final/projects.json
+++ b/final/projects.json
@@ -17,7 +17,7 @@
         "mainimage": "insert",
         "images": "insert"},
 
-        {"name": "insert",
+        {"name": "Contact series",
         "subdomain": "insert",
         "category": "insert",
         "subtitle": "insert",
