more work on final

--- a/final/projects.json
+++ b/final/projects.json
@@ -2,59 +2,92 @@
     "projects": [{
 
         "name": "today i will lay on the ground and stew in this misery",
-        "subdomain": "insert",
+        "subdomain": "today_i_will",
         "category": "insert",
-        "subtitle": "insert",
+        "subtitle": "April 2024, 55x76cm, Oil on Canvas.",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"},
 
-        {"name": "The Day's Leftovers",
-        "subdomain": "insert",
+        {"name": "She held me, and now i hold her memory",
+        "subdomain": "she_held_me",
         "category": "insert",
-        "subtitle": "insert",
+        "subtitle": "December 2024, 5ft x 42in, Oil on Canvas.",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"},
 
         {"name": "Contact series",
-        "subdomain": "insert",
+        "subdomain": "contact_series",
+        "category": "insert",
+        "subtitle": "2023, oil pastel.",
+        "abstract": "insert",
+        "mainimage": "insert",
+        "images": "insert"},
+
+        {"name": "Me and my Dog",
+        "subdomain": "me_and_my_dog",
+        "category": "insert",
+        "subtitle": "May 2024, 69 x 51 cm, 51 x 45 cm, oil on canvas.",
+        "abstract": "insert",
+        "mainimage": "insert",
+        "images": "insert"},
+
+        {"name": "The Day's Leftovers",
+        "subdomain": "the_days-leftovers",
+        "category": "insert",
+        "subtitle": "2023, 6 x 11in x 14in, graphite.",
+        "abstract": "insert",
+        "mainimage": "insert",
+        "images": "insert"},
+
+        {"name": "Who’s skin is this? I’ve touched my face so many times in this mirror tonight that I don’t think this skin belongs to me anymore.",
+        "subdomain": "whos_skin",
+        "category": "insert",
+        "subtitle": "December 2024 and 2023, 2 x 18 x 24in, oil on canvas",
+        "abstract": "insert",
+        "mainimage": "insert",
+        "images": "insert"},
+
+        {"name": "Literally Leave Me Alone",
+        "subdomain": "leave_me_alone",
         "category": "insert",
         "subtitle": "insert",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"},
 
-        {"name": "insert",
-        "subdomain": "insert",
+        {"name": "Melting Out my Misery",
+        "subdomain": "melting_out",
         "category": "insert",
         "subtitle": "insert",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"},
 
-        {"name": "insert",
-        "subdomain": "insert",
+        {"name": "Self Portrait Series",
+        "subdomain": "self_portrait",
         "category": "insert",
         "subtitle": "insert",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"},
 
-        {"name": "insert",
-        "subdomain": "insert",
+        {"name": "Fight Club",
+        "subdomain": "fight_club",
         "category": "insert",
         "subtitle": "insert",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"},
 
-        {"name": "insert",
-        "subdomain": "insert",
+        {"name": "Grandma's Hands",
+        "subdomain": "grandmas_hands",
         "category": "insert",
         "subtitle": "insert",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"}
+
     ]
 }
