lots of stuff!!

--- a/final/projects.json
+++ b/final/projects.json
@@ -3,7 +3,7 @@
 
         "name": "today i will lay on the ground and stew in this misery",
         "subdomain": "today_i_will",
-        "category": "insert",
+        "category": ["oil painting", "2024"],
         "subtitle": "April 2024, 55x76cm, Oil on Canvas.",
         "abstract": "insert",
         "mainimage": "insert",
@@ -11,7 +11,7 @@
 
         {"name": "She held me, and now i hold her memory",
         "subdomain": "she_held_me",
-        "category": "insert",
+        "category": ["oil painting", "2024"],
         "subtitle": "December 2024, 5ft x 42in, Oil on Canvas.",
         "abstract": "insert",
         "mainimage": "insert",
@@ -19,7 +19,7 @@
 
         {"name": "Contact series",
         "subdomain": "contact_series",
-        "category": "insert",
+        "category": ["oil pastel","2023"],
         "subtitle": "2023, oil pastel.",
         "abstract": "insert",
         "mainimage": "insert",
@@ -27,15 +27,15 @@
 
         {"name": "Me and my Dog",
         "subdomain": "me_and_my_dog",
-        "category": "insert",
+        "category": ["oil painting","2024"],
         "subtitle": "May 2024, 69 x 51 cm, 51 x 45 cm, oil on canvas.",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"},
 
         {"name": "The Day's Leftovers",
-        "subdomain": "the_days-leftovers",
-        "category": "insert",
+        "subdomain": "the_days_leftovers",
+        "category": ["graphite","2023"],
         "subtitle": "2023, 6 x 11in x 14in, graphite.",
         "abstract": "insert",
         "mainimage": "insert",
@@ -43,7 +43,7 @@
 
         {"name": "Who’s skin is this? I’ve touched my face so many times in this mirror tonight that I don’t think this skin belongs to me anymore.",
         "subdomain": "whos_skin",
-        "category": "insert",
+        "category": ["oil painting","2023","2024"],
         "subtitle": "December 2024 and 2023, 2 x 18 x 24in, oil on canvas",
         "abstract": "insert",
         "mainimage": "insert",
@@ -51,7 +51,7 @@
 
         {"name": "Literally Leave Me Alone",
         "subdomain": "leave_me_alone",
-        "category": "insert",
+        "category": ["colored pencil","2023"],
         "subtitle": "insert",
         "abstract": "insert",
         "mainimage": "insert",
@@ -59,32 +59,32 @@
 
         {"name": "Melting Out my Misery",
         "subdomain": "melting_out",
-        "category": "insert",
-        "subtitle": "insert",
+        "category": ["oil pastel","2023"],
+        "subtitle": "2023, 19.5 x 25.5in, oil pastel",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"},
 
         {"name": "Self Portrait Series",
         "subdomain": "self_portrait",
-        "category": "insert",
-        "subtitle": "insert",
+        "category": ["graphite","2022","2021"],
+        "subtitle": "2021-2022",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"},
 
         {"name": "Fight Club",
         "subdomain": "fight_club",
-        "category": "insert",
-        "subtitle": "insert",
+        "category": ["graphite","2022"],
+        "subtitle": "2022, 18 x 24in, graphite",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"},
 
         {"name": "Grandma's Hands",
         "subdomain": "grandmas_hands",
-        "category": "insert",
-        "subtitle": "insert",
+        "category": ["colored pencil","2021"],
+        "subtitle": "2021, 16 x 20.5in, colored pencil",
         "abstract": "insert",
         "mainimage": "insert",
         "images": "insert"}
