--- a/final/projects.json
+++ b/final/projects.json
@@ -6,8 +6,8 @@
         "category": ["oil painting", "2024"],
         "subtitle": "April 2024, 55x76cm, Oil on Canvas.",
         "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"},
+        "mainimage": "ground.jpg",
+        "images": "ground.jpg"},
 
         {"name": "She held me, and now i hold her memory",
         "subdomain": "she_held_me",
