--- a/final/projects.json
+++ b/final/projects.json
@@ -6,8 +6,7 @@
         "category": ["oil painting", "2024"],
         "subtitle": "April 2024, 55x76cm, Oil on Canvas.",
         "abstract": "insert",
-        "mainimage": "ground.jpg",
-        "images": "ground.jpg"},
+        "images": ["../final/img/mainimage (1).png"]},
 
         {"name": "She held me, and now i hold her memory",
         "subdomain": "she_held_me",
