--- a/final/projects.json
+++ b/final/projects.json
@@ -6,87 +6,71 @@
         "category": ["oil painting", "2024"],
         "subtitle": "April 2024, 55x76cm, Oil on Canvas.",
         "abstract": "insert",
-        "images": ["../final/img/mainimage (1).png"]},
+        "images": ["../final/img/mainimage (1).png", "../final/img/today_label.png"]},
 
         {"name": "She held me, and now i hold her memory",
         "subdomain": "she_held_me",
         "category": ["oil painting", "2024"],
         "subtitle": "December 2024, 5ft x 42in, Oil on Canvas.",
         "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"},
+        "images": ["../final/img/mainimage (2).png","../final/img/holding_label.png"]},
 
         {"name": "Contact series",
         "subdomain": "contact_series",
         "category": ["oil pastel","2023"],
         "subtitle": "2023, oil pastel.",
         "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"},
+        "images": ["../final/img/mainimage (3).png","../final/img/contact_label.png","../final/img/contact (1).png","../final/img/contact (2).png","../final/img/contact (3).png"]},
 
         {"name": "Me and my Dog",
         "subdomain": "me_and_my_dog",
         "category": ["oil painting","2024"],
         "subtitle": "May 2024, 69 x 51 cm, 51 x 45 cm, oil on canvas.",
         "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"},
+        "images": ["../final/img/mainimage (4).png","../final/img/dog.png"]},
 
         {"name": "The Day's Leftovers",
         "subdomain": "the_days_leftovers",
         "category": ["graphite","2023"],
         "subtitle": "2023, 6 x 11in x 14in, graphite.",
         "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"},
+        "images": ["../final/img/mainimage (5)","../final/img/days_label.png","../final/img/days (1).png","../final/img/days (2).png","../final/img/days (3).png","../final/img/days (4).png","../final/img/days (5).png","../final/img/days (6).png"]},
 
         {"name": "Who’s skin is this? I’ve touched my face so many times in this mirror tonight that I don’t think this skin belongs to me anymore.",
         "subdomain": "whos_skin",
         "category": ["oil painting","2023","2024"],
         "subtitle": "December 2024 and 2023, 2 x 18 x 24in, oil on canvas",
         "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"},
+        "images": ["../final/img/mainimage (6).png","../final/img/whos_skin.png"]},
 
-        {"name": "Literally Leave Me Alone",
-        "subdomain": "leave_me_alone",
-        "category": ["colored pencil","2023"],
-        "subtitle": "insert",
-        "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"},
 
         {"name": "Melting Out my Misery",
         "subdomain": "melting_out",
         "category": ["oil pastel","2023"],
         "subtitle": "2023, 19.5 x 25.5in, oil pastel",
         "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"},
+        "images": ["../final/img/mainimage (7)"]},
 
         {"name": "Self Portrait Series",
         "subdomain": "self_portrait",
         "category": ["graphite","2022","2021"],
         "subtitle": "2021-2022",
         "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"},
+        "images": ["../final/img/mainimage (8)","../final/img/self_portrait (1).png","../final/img/self_portrait (2).png","../final/img/self_portrait (3).png"]},
 
         {"name": "Fight Club",
         "subdomain": "fight_club",
         "category": ["graphite","2022"],
         "subtitle": "2022, 18 x 24in, graphite",
         "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"},
+        "images": "../final/img/mainimage (9)"},
 
         {"name": "Grandma's Hands",
         "subdomain": "grandmas_hands",
         "category": ["colored pencil","2021"],
         "subtitle": "2021, 16 x 20.5in, colored pencil",
         "abstract": "insert",
-        "mainimage": "insert",
-        "images": "insert"}
+        "images": "../final/img/mainimage (10).png"}
 
     ]
 }
