--- a/final/projects.json
+++ b/final/projects.json
@@ -5,42 +5,42 @@
         "subdomain": "today_i_will",
         "category": ["oil painting", "2024"],
         "subtitle": "April 2024, 55x76cm, Oil on Canvas.",
-        "abstract": "insert",
+        "abstract": "I am sitting on this pink couch. It's a “girl” color, whatever that means. On this pink couch I listen to my friend’s stories about men not believing she knows things about sports. I watch myself age out of the infantilized beauty standard. I hear stories of older men saying inappropriate things to young women. I recall previous days before when I encountered men doing nothing but viewing women as objects, as prey, and I remember the night we were dancing to music in a club and all of a sudden we are surrounded on all sides by men who are grabbing our waists or lingering too close or running their hand down the entire length of my back as an introduction and i just want to get OUT I want to RUN I want to push them off of me and shove them to the ground but that will not do I cannot fight back because no matter how wrong they are and how uncomfortable they make me feel they will only ever view me as an object so all I can do is slowly melt off my bright girl pink couch and onto the dusty floor and lie there and think about what it means and how it feels to live in this gross patriarchal world. There is hope, yes. There is happiness. But today I cannot see it, today I will lay on the ground and stew in this misery. ",
         "images": ["../final/img/mainimage (1).png", "../final/img/today_label.png"]},
 
         {"name": "She held me, and now i hold her memory",
         "subdomain": "she_held_me",
         "category": ["oil painting", "2024"],
         "subtitle": "December 2024, 5ft x 42in, Oil on Canvas.",
-        "abstract": "insert",
+        "abstract": "How can we honor the ones we love? When I think of my grandma, I do think of her achievements, the family she built, and the people she loves. But I also think of the small moments, whether that is the pressure of a hug that makes her every time, without fail, remark that I am a good hugger, or if that is her holding me as I lay on her shoulder, blissfully unaware of anything around me. To honor her is to preserve this moment on canvas, oil paint illustrating her calm, protective gaze and the wrinkles in her hands, weathered by years and years of living. And as dementia plagues her brain and hijacks her memories, all I can do is make sure that someone preserves them for her. To preserve her in a painting is to make sure that her greatness, her kindness, her care, and her love, exists and matters.",
         "images": ["../final/img/mainimage (2).png","../final/img/holding_label.png"]},
 
         {"name": "Contact series",
         "subdomain": "contact_series",
         "category": ["oil pastel","2023"],
         "subtitle": "2023, oil pastel.",
-        "abstract": "insert",
+        "abstract": "As I scrolled through my camera roll, I was drawn to photos of people holding each other. Whether it was my parents hugging, posing for a picture in Venice or my dad and I hugging on the bank of a lake in Montana. Whether it was a photo from three years ago of my best friend and I hugging on one of the last days of high school, or my dad holding me in a blanket at a cold football game in 2009. Or whether it was my mother holding the hands of her mother, something she does every Sunday when she visits her mother at the memory care facility. To examine the ways that we hold each other, I zoomed in on my found photos and cropped them so just the hands and where they came in contact with the other person were visible. The drawings exclude faces, hopefully causing the pieces to be more relatable. They are not a portrait of the people in them, rather a portrait of the hug itself. For three of them, I brought the two sides of the hug together to create a distortion and emphasize closeness. ",
         "images": ["../final/img/mainimage (3).png","../final/img/contact_label.png","../final/img/contact (1).png","../final/img/contact (2).png","../final/img/contact (3).png"]},
 
         {"name": "Me and my Dog",
         "subdomain": "me_and_my_dog",
         "category": ["oil painting","2024"],
         "subtitle": "May 2024, 69 x 51 cm, 51 x 45 cm, oil on canvas.",
-        "abstract": "insert",
+        "abstract": "Painting serves as a tool to preserve memory. When I paint my mother’s hand, I better remember how it looks because I scrutinized and replicated every little detail. When I paint my own face, it becomes more familiar when I look in the mirror. These past few months I have spent more time away from home in my life than I ever have before, and I found myself missing the things that make home feel like home more deeply every day I am gone. I miss the people, yes, but I also simply miss my dog. By painting these two candid moments of my dog and me sleeping, I was able to remember and gain comfort from scrutinizing every detail. I remember how soft her fur is, how she smells, how it feels to lay down and take a nap with her company. In the action of painting, I was able to conserve my memory of the mundane moments that I did not know I would miss until they were no longer accessible. This diptych could be about something greater, something that I examine for a deeper meaning. But that would be an over embellishment of the actual reason I chose the subject. I painted these scenes because I simply miss my dog, and painting her was a remedy to my missing her.",
         "images": ["../final/img/mainimage (4).png","../final/img/dog.png"]},
 
         {"name": "The Day's Leftovers",
         "subdomain": "the_days_leftovers",
         "category": ["graphite","2023"],
         "subtitle": "2023, 6 x 11in x 14in, graphite.",
-        "abstract": "insert",
+        "abstract": "In this six drawing series I examine the marks left on the body after wearing something throughout the day. Each mark is an unintentional leftover from the intentional wearing of something. The series confronts the saying “beauty is pain”, and while beauty is not always pain, the ways in which we present ourselves to the world through what we wear leaves marks on our body. ",
         "images": ["../final/img/mainimage (5)","../final/img/days_label.png","../final/img/days (1).png","../final/img/days (2).png","../final/img/days (3).png","../final/img/days (4).png","../final/img/days (5).png","../final/img/days (6).png"]},
 
         {"name": "Who’s skin is this? I’ve touched my face so many times in this mirror tonight that I don’t think this skin belongs to me anymore.",
         "subdomain": "whos_skin",
         "category": ["oil painting","2023","2024"],
         "subtitle": "December 2024 and 2023, 2 x 18 x 24in, oil on canvas",
-        "abstract": "insert",
+        "abstract": "Sometimes I stand in the mirror, an inch away from the reflective surface, and I obsessively poke, prod and examine my skin. That level of intense focus sends me into a dissociative state, and makes me feel like the skin I have on my face doesn’t belong to me anymore. Thispainting is meant to convey that feeling of dissociative distortion that comes with obsessively over examining myself in the mirror. I overlayed two close up images of my face, and the combination of the two photos creates a confusing composition. The blue photo is on the bottom, and the red photo is transparent on top of it, creating an interesting blend of colors. ",
         "images": ["../final/img/mainimage (6).png","../final/img/whos_skin.png"]},
 
 
@@ -48,28 +48,28 @@
         "subdomain": "melting_out",
         "category": ["oil pastel","2023"],
         "subtitle": "2023, 19.5 x 25.5in, oil pastel",
-        "abstract": "insert",
+        "abstract": "This personal narrative drawing addresses the feelings that spark creativity. The self portrait illustrates how my creativity and ideas come out of misery and struggle. Many people have outlets to deal with their struggles like journaling, exercising, being out in nature, and many more, and as those methods help me, the only way I have found that helps me truly process my emotions is through art making, represented by the stream of color melting out of my head and eye on the bottom of the page. The choice to exclude a background emphasizes my place on the page, the only place I can truly represent myself.  ",
         "images": ["../final/img/mainimage (7)"]},
 
         {"name": "Self Portrait Series",
         "subdomain": "self_portrait",
         "category": ["graphite","2022","2021"],
         "subtitle": "2021-2022",
-        "abstract": "insert",
+        "abstract": "These three graphite self portraits were done as my final projects for my first three art classes in college. Through them, I went through a period of self discovery. The first one is about deception, the second about dysmorphia, and the third is about distortion.",
         "images": ["../final/img/mainimage (8)","../final/img/self_portrait (1).png","../final/img/self_portrait (2).png","../final/img/self_portrait (3).png"]},
 
         {"name": "Fight Club",
         "subdomain": "fight_club",
         "category": ["graphite","2022"],
         "subtitle": "2022, 18 x 24in, graphite",
-        "abstract": "insert",
+        "abstract": "This drawing was for a film still assignment in my beginning drawing class. ",
         "images": "../final/img/mainimage (9)"},
 
         {"name": "Grandma's Hands",
         "subdomain": "grandmas_hands",
         "category": ["colored pencil","2021"],
         "subtitle": "2021, 16 x 20.5in, colored pencil",
-        "abstract": "insert",
+        "abstract": "This drawing of my grandma's hands was the first drawing I ever did with any meaning. ",
         "images": "../final/img/mainimage (10).png"}
 
     ]
